# qualcomm-rust-training-dec-2023

1-getting-started/src/: main.rs
collections/basic-collections/: Cargo.toml
collections/basic-collections/src/: main.rs
collections/iterators/src/: main.rs
collections/strings/src/: main.rs
concurrency/concurrency-traits/: Cargo.toml
concurrency/concurrency-traits/src/: main.rs
concurrency/data-sharing/: Cargo.toml
concurrency/data-sharing/src/: main.rs
concurrency/message-passing/src/: main.rs
concurrency/thread-basics/: Cargo.toml
concurrency/thread-basics/src/: main.rs
control-flow/src/: main.rs
error-handling-debug/: Cargo.toml  log.txt
error-handling-debug/src/: main.rs
file-io/: readme.txt  writeme.txt  writeme1.txt
file-io/src/: main.rs
image-io/: Cargo.toml
image-io/src/: main.rs
move-copy-borrow/: Cargo.toml
move-copy-borrow/src/: main.rs
ref-and-slices/: Cargo.toml
ref-and-slices/src/: main.rs
regex/src/: main.rs
rust-data-types/src/: main.rs
rust-syntax/: Cargo.toml
rust-syntax/src/: lib.rs  main.rs
structuring-rust-code/modules/: Cargo.toml
structuring-rust-code/modules/src/: lib.rs  main.rs
structuring-rust-code/modules/src/coffee/: espresso.rs  mod.rs
structuring-rust-code/modules/src/tea/: mod.rs
structuring-rust-code/third-party-deps/: Cargo.toml  coffee.db
traits/src/: main.rs
unit-test-one/: Cargo.toml
unit-test-one/src/: lib.rs
unit-test/src/: my_module.rs
web-api/: Cargo.toml
web-api/src/: main.rs
writing-functions/: Cargo.toml
writing-functions/src/: main.rs
(+7 files in other folders)
