[package]
name = "modules"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wbc"
path = "src/lib.rs"

[[bin]]
name="test"
path="src/main.rs"


[[bin]]
name="test-one"
path="src/main.rs"



[dependencies]
